--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 section {
-	width: 15em;
-	height: 10em;
+	width: 18em;
+	height: 15em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -27,14 +27,15 @@ h1 {
 	font-weight: lighter;
 	font-size: 40px;
 	color: #BFBFBF;
-	margin-top: -30px;
+	margin-top: -40px;
 }
 
 .botones {
 	display: flex;
 	justify-content: space-around;
-	width: 13em;
+	width: 15em;
 	height: 1.35em;
+	margin-top: 10px;
 }
 
 .entrada {
@@ -46,11 +47,13 @@ h1 {
 
 input[type=text], input[type=password] {
 	width: 95%;
-	height: 30%;
+	height: 35%;
 	padding-left: 5px;
 	letter-spacing: 1px;
 	background-color: #b3b3b3;
 	border: solid #b3b3b3;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 input[type=text]:focus {
@@ -89,7 +92,7 @@ input[type=password]:focus {
 }
 
 .registrar {
-	width: 30%;
+	width: 35%;
 	height: 2em;
 	letter-spacing: 1px;
 	font-size: 15px;
